# Machine-Learning

./: Dockerfile  Makefile  README.md  pyproject.toml
cli/: __main__.py
ml_service/: crud.py  database.py  helper.py  main.py  model_router.py  models.py
tests/ml_service/: conftest.py  test_crud.py  test_database.py  test_helper.py  test_model_router.py  test_models.py
