[[tool.poetry.source]]
name = "ml_to_prod"
url = "https://gitlab.com/api/v4/projects/22325830/packages/pypi/simple"

[tool.poetry]
name = "ml-service"
version = "0.1.0"
description = ""
authors = ["Jendrik <jendrik.joerdening@nooxit.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.61.1"}
mlflow = "^1.11.0"
scikit-learn = "^0.23.2"
psycopg2-binary = "^2.8.6"
boto3 = "*"
sklego = "^0.0"
transformers-ml-to-prod = "*"
requests = "^2.24.0"
s3fs = "^0.5.1"

[tool.poetry.dev-dependencies]
black = "==20.08b1"
flake8 = "*"
flake8-module-name = "*"
mypy = "*"
pep8-naming = "*"
pytest = "*"
pytest-cov = "*"
pytest-diff = "*"
docker = "^4.3.1"

[tool.black]
line-length = 79

[tool.pytest.ini_options]
addopts = "-v --color=yes --cov=ml_service --cov-report=term-missing"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
